Added visual indicators for cancelled trip

--- a/app/component/departure.scss
+++ b/app/component/departure.scss
@@ -191,27 +191,9 @@
 
 .canceled .time,
 .time.canceled {
-  position: relative;
-  display: inline-block;
-  color: $cancelation-black;
-  background-color: $cancelation-background;
-  border-radius: $border-radius;
-  &::before,
-  &::after {
-    content: '';
-    width: 1.5em;
-    position: absolute;
-    left: 0.825em;
-    top: 50%;
-    opacity: 0.5;
-    border-bottom: 1px solid $cancelation-red;
-  }
-  &::before {
-    transform: skewY(-30deg);
-  }
-  &::after {
-    transform: skewY(30deg);
-  }
+  text-decoration: line-through;
+  color: #ca2c53;
+  font-weight: 500;
 }
 
 .card .canceled .time {
