--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -195,6 +195,17 @@
     .route-destination {
       padding-left: $padding-medium;
     }
+    .trip-cancelled {
+      color: #ca2c53;
+      font-weight: 500;
+      .icon-container {
+        margin-right: 0.3em;
+      }
+      svg.trip-cancelled-icon {
+        color: $white;
+        fill: #ca2c53;
+      }
+    }
   }
 }
 
